# CellularAutomata

./: .gitignore  CMakeLists.txt  compile_commands.json  imgui.ini
src/: main.cpp
src/logger/: logger.cpp  logger.h
